# quantum-cloud-provider

./: README.md
simple_ide/: package-lock.json  package.json
simple_ide/src/: App.tsx  qasm.ts
simple_ide/src/components/: computersList.tsx
simple_server/: pyproject.toml  requirements.txt  run_server.sh
simple_server/executor_server/: server.py
simple_server/myprojectenv/: pyvenv.cfg
simple_server/tests/: server_test.py
